--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -10,7 +10,7 @@
       <a routerLink="/starred"><img class="navicon" src="https://cdn1.iconfinder.com/data/icons/modern-universal/32/icon-20-256.png">Starred</a>
       <a routerLink="/issue"><img class="navicon" src="https://cdn0.iconfinder.com/data/icons/mini-documents-and-folders/32/_checklist-256.png">Issues</a>
       <a routerLink="/settings"><img class="navicon" src="https://cdn3.iconfinder.com/data/icons/web-and-seo-31/16/setting-gear-cog-256.png">Settings</a>
-      <a routerLink="/add"><img class="navicon" src="https://cdn4.iconfinder.com/data/icons/email-2-2/32/Trash-Email-Bin-256.png" >Trash</a>
+      <a routerLink="/recyclebin"><img class="navicon" src="https://cdn4.iconfinder.com/data/icons/email-2-2/32/Trash-Email-Bin-256.png" >Trash</a>
     </div>
   </div>
   <div class="column middle">
