--- a/src/app/info/info.component.html
+++ b/src/app/info/info.component.html
@@ -1,4 +1,4 @@
-<div class="trashtable">
+<!-- <div class="trashtable">
     <table  (click)="pop(notification)" *ngFor="let userinformation of userinformations">
             <tr>Employee Id :{{ userinformation.empId }}</tr>
             <tr>First Name : {{ userinformation.firstName }}</tr>
@@ -8,8 +8,93 @@
             <tr>Job Position : {{ userinformation.jobPosition }}</tr>
             <tr>Telephone Number : {{userinformation.telephoneNo}}</tr>
             <tr>User Email : {{userinformation.userEmail}}</tr>
-            <button (click)="approveUser(userinformation)">Approve</button>
+            <button (click)="approveUser(userinformation)">Approve</button> -->
             <!-- <button class="button button4" (click)="updateNotification(notification)">Edit</button>
             <button class="button button3" (click)="deleteNotification(notification.id)">Delete</button> -->
+    <!-- </table>
+</div> -->
+<!-- <app-manage-user></app-manage-user> -->
+
+<!-- Add inspection trigger modal -->
+<!-- Button trigger modal -->
+<!-- <button type="button" class="btn btn-secondary float-end m-2" data-bs-toggle="modal" data-bs-target="#exampleModal">
+  Show Inspection Types
+</button> -->
+<div class="trashtable">
+    <table class="table table-striped" >
+      <thead style="color: white;">
+        <th>Employee Id</th>
+        <th>First Name </th>
+        <th>Last Name </th>
+        <th>Address</th>
+        <th>City</th>
+        <th>Job Position</th>
+        <th>Telephone No</th>
+        <th>User Email</th>
+      </thead>
+      <tbody style="color: white;" >
+        <tr *ngFor="let item of userList$|async" >
+          <td style="color: white;">{{item.empId}}</td>
+          <td style="color: white;">{{item.firstName}}</td>
+          <td style="color: white;">{{item.lastName}}</td>
+          <td style="color: white;">{{item.address}}</td>
+          <td style="color: white;">{{item.city}}</td>
+          <td style="color: white;">{{item.jobPosition}}</td>
+          <td style="color: white;">{{item.telephoneNo}}</td>
+          <td style="color: white;">{{item.userEmail}}</td>
+          <td>
+            <button class="btn btn-outline-primary me-2 mb-1" (click)="modalEdit(item)" data-bs-toggle="modal"
+              data-bs-target="#staticBackdrop">
+              <!-- <button (click)="modalEdit(item)" data-toggle="modal" data-target="#exampleModal">edit</button> -->
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                class="bi bi-pencil-square" viewBox="0 0 16 16">
+                <path
+                  d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
+                <path fill-rule="evenodd"
+                  d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
+              </svg>
+            </button>
+            <button class="btn btn-outline-danger me-2 mb-1" (click)="deleteUser(item)">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash"
+                viewBox="0 0 16 16">
+                <path
+                  d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z" />
+                <path fill-rule="evenodd"
+                  d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z" />
+              </svg>
+            </button>
+          </td>
+  
+        </tr>
+      </tbody>
     </table>
-</div>
+  
+    <div class="alert alert-success" role="alert" id="add-success-alert">
+      User successfully added!
+    </div>
+  
+    <div class="alert alert-success" role="alert" id="update-success-alert">
+      User successfully updated!
+    </div>
+  
+    <div class="alert alert-success" role="alert" id="delete-success-alert">
+      User successfully deleted!
+    </div>
+  
+  
+    <!-- Add or edit user Modal -->
+    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 style="color: black;" class="modal-title" id="staticBackdropLabel">{{modalTitle}}</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="modalClose()"
+              id="add-edit-modal-close"></button>
+          </div>
+          <div class="modal-body">
+            <app-edit-user [user]="user" *ngIf="activateEditUserComponent"></app-edit-user>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
