--- a/src/app/privacy/manage-user/show-user/show-user.component.html
+++ b/src/app/privacy/manage-user/show-user/show-user.component.html
@@ -70,7 +70,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="staticBackdropLabel">{{modalTitle}}</h5>
+          <h5 style="color: black;" class="modal-title" id="staticBackdropLabel">{{modalTitle}}</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="modalClose()"
             id="add-edit-modal-close"></button>
         </div>
