--- a/src/app/dashboard/folders/folders.component.html
+++ b/src/app/dashboard/folders/folders.component.html
@@ -34,7 +34,7 @@
       <th>Name</th>
       <th>Comment</th>
     </tr>
-    <tr (click)="pop(folder)" *ngFor="let folder of folders">
+    <tr *ngFor="let folder of folders">
       <td>{{ folder.name }}</td>
       <td>{{folder.comment}}</td>
       <button class="button button4" (click)="updateFolder(folder)">Edit</button>
@@ -47,49 +47,57 @@
   <!-- <app-documents></app-documents> -->
   <section class="users">
     <h1 style="color:white;">Files Details</h1>
-    <table class="table table-striped">
-        <thead>
-            <tr style="color:white;font-size: 20px;">
-                <th scope="col">File</th>
-                <th scope="col">Name</th>
-                <th scope="col">Comments</th>
-                <th scope="col">Action</th>
+    <table class="table table-striped" *ngIf='!isView'>
+      <thead>
+        <tr style="color:white;font-size: 20px;">
+          <th scope="col">File</th>
+          <th scope="col">Name</th>
+          <th scope="col">Comments</th>
+          <th scope="col">Action</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr style="color: aliceblue;" *ngFor="let fileUpload of fileUploads">
+          <!-- <td style="color: white;"><img [src]="createImgPath(user.imgPath)" alt="profile picture" style="width:60px; height:60px;"></td>  -->
+          <td style="color: white;"> <img
+              src="https://cdn4.iconfinder.com/data/icons/small-n-flat/24/folder-green-512.png"
+              style="width: 40px; height:40px"></td>
+          <td style="color: white;">{{fileUpload.name}}</td>
+          <td style="color: white;">{{fileUpload.address}}</td>
+          <!-- <td><app-delete [fileUrl]="userdata.imgPath"></app-delete></td>-->
+          <td style="color: white;">
+            <!-- <app-download [fileUrl]="fileUpload.imgPath"></app-download> -->
+            <button (click)="addToFolder(fileUpload)">Add To Folder</button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <table class="table table-striped" *ngIf='isView'>
+      <h3 style="color: white;">After view</h3>
+      <thead>
+        <tr style="color:white;font-size: 20px;">
+          <th scope="col">File</th>
+          <th scope="col">Name</th>
+          <th scope="col">Comments</th>
+          <th scope="col">Action</th>
 
-            </tr>
-        </thead>
-        <tbody *ngIf='!isView'>
-            <tr style="color: aliceblue;" *ngFor="let fileUpload of fileUploads" >
-                <!-- <td style="color: white;"><img [src]="createImgPath(user.imgPath)" alt="profile picture" style="width:60px; height:60px;"></td>  -->
-                <td style="color: white;"> <img
-                        src="https://cdn4.iconfinder.com/data/icons/small-n-flat/24/folder-green-512.png"
-                        style="width: 40px; height:40px"></td>
-                <td style="color: white;">{{fileUpload.name}}</td>
-                <td style="color: white;">{{fileUpload.address}}</td>
-                <!-- <td><app-delete [fileUrl]="userdata.imgPath"></app-delete></td>-->
-                <td style="color: white;">
-                    <!-- <app-download [fileUrl]="fileUpload.imgPath"></app-download> -->
-                    <button (click)="addToFolder(fileUpload)">Add To Folder</button>
-                </td>
-            </tr>
-        </tbody>
-        
-        <tbody *ngIf='isView'>
-        <h3 style="color: white;">After view</h3>
-          <tr style="color: aliceblue;" *ngFor="let fileUpload of fileUploads">
-              <!-- <td style="color: white;"><img [src]="createImgPath(user.imgPath)" alt="profile picture" style="width:60px; height:60px;"></td>  -->
-              <td style="color: white;"> <img
-                      src="https://cdn4.iconfinder.com/data/icons/small-n-flat/24/folder-green-512.png"
-                      style="width: 40px; height:40px"></td>
-              <td style="color: white;">{{fileUpload.name}}</td>
-              <td style="color: white;">{{fileUpload.address}}</td>
-              <!-- <td><app-delete [fileUrl]="userdata.imgPath"></app-delete></td>-->
-              <td style="color: white;">
-                  <!-- <app-download [fileUrl]="fileUpload.imgPath"></app-download> -->
-                  <button (click)="addToFolder(fileUpload)"> Add To Folder</button>
-              </td>
-          </tr>
+        </tr>
+      </thead>
+      <tbody>
+        <tr style="color: aliceblue;" *ngFor="let fileUpload of fileUploads">
+          <div *ngIf="isViewfolderId==fileUpload.folderId">
+            <td style="color: white;"> <img
+                src="https://cdn4.iconfinder.com/data/icons/small-n-flat/24/folder-green-512.png"
+                style="width: 40px; height:40px"></td>
+            <td style="color: white;">{{fileUpload.name}}</td>
+            <td style="color: white;">{{fileUpload.address}}</td>
+            <!-- <td><app-delete [fileUrl]="userdata.imgPath"></app-delete></td>-->
+            <td style="color: white;">
+              <!-- <app-download [fileUrl]="fileUpload.imgPath"></app-download> -->
+              <button (click)="addToFolder(fileUpload)"> Add To Folder</button>
+            </td>
+          </div>
+        </tr>
       </tbody>
     </table>
   </section>
-
-
