--- a/src/app/info/info.component.css
+++ b/src/app/info/info.component.css
@@ -1,4 +1,4 @@
-/* div.trashtable{
+ div.trashtable{
     border-radius: 5px;
     border: 1px;
     border-color: #ddd;
@@ -10,7 +10,7 @@
     box-shadow:
        inset 0 -3em 3em rgba(0,0,0,0.1),
              0.3em 0.3em 1em rgba(0,0,0,0.3);
-}
+}/*
 input{
 
   height: 20px; 
@@ -94,41 +94,107 @@ tr:hover {background-color: gray;}
   height: 40px;
 }  */
 
-#add-success-alert,
-#update-success-alert,
-#delete-success-alert {
-  display: none;
+body{
+  background: -webkit-linear-gradient(left, #3931af, #00c6ff);
+}
+.emp-profile{
+  padding: 3%;
+  margin-top: 3%;
+  margin-bottom: 3%;
+  border-radius: 0.5rem;
+  background: #fff;
+}
+.profile-img{
+  text-align: center;
+}
+.profile-img img{
+  width: 70%;
+  height: 100%;
+}
+.profile-img .file {
+  position: relative;
+  overflow: hidden;
+  margin-top: -20%;
+  width: 70%;
+  border: none;
+  border-radius: 0;
+  font-size: 15px;
+  background: #212529b8;
+}
+.profile-img .file input {
+  position: absolute;
+  opacity: 0;
+  right: 0;
+  top: 0;
+}
+.profile-head h5{
+  color: #333;
+}
+.profile-head h6{
+  color: #0062cc;
+}
+.profile-edit-btn{
+  border: none;
+  border-radius: 1.5rem;
+  width: 70%;
+  padding: 2%;
+  font-weight: 600;
+  color: #6c757d;
+  cursor: pointer;
+}
+.proile-rating{
+  font-size: 12px;
+  color: #818182;
+  margin-top: 5%;
+}
+.proile-rating span{
+  color: #495057;
+  font-size: 15px;
+  font-weight: 600;
+}
+.profile-head .nav-tabs{
+  margin-bottom:5%;
+}
+.profile-head .nav-tabs .nav-link{
+  font-weight:600;
+  border: none;
+}
+.profile-head .nav-tabs .nav-link.active{
+  border: none;
+  border-bottom:2px solid #0062cc;
+}
+.profile-work{
+  padding: 14%;
+  margin-top: -15%;
+}
+.profile-work p{
+  font-size: 12px;
+  color: #818182;
+  font-weight: 600;
+  margin-top: 10%;
+}
+.profile-work a{
+  text-decoration: none;
+  color: #495057;
+  font-weight: 600;
+  font-size: 14px;
+}
+.profile-work ul{
+  list-style: none;
+}
+.profile-tab label{
+  font-weight: 600;
+}
+.profile-tab p{
+  font-weight: 600;
+  color: #0062cc;
 }
 
-#add-success-alert,
-#update-success-alert,
-#delete-success-alert {
-  animation-name: fadeInAndOut;
-  animation-duration: 4s;
+.btn-outline-success{
+  border-color: #3EA977;
+  color: #3EA977;
 }
 
-@-webkit-keyframes fadeInAndOut {
-  0% {opacity: 0;}
-  50% {opacity: 1;}
-  100% {opacity: 0;}
-}
-
-@keyframes fadeInAndOut {
-  0% {opacity: 0;}
-  50% {opacity: 1;}
-  100% {opacity: 0;}
-}
-
-div.trashtable{
-  border-radius: 5px;
-  border: 1px;
-  border-color: #ddd;
-  border-style: groove;
-  padding: 15px;
-  margin-top: 30px;
-  background-color: #27293D;
-
-  box-shadow:
-     inset 0 -3em 3em rgba(0,0,0,0.1),
-           0.3em 0.3em 1em rgba(0,0,0,0.3);
+.btn-outline-success:hover{
+  background-color: #3EA977;
 }
