--- a/src/app/dashboard/folders/folders.component.html
+++ b/src/app/dashboard/folders/folders.component.html
@@ -39,9 +39,9 @@
       <td>{{folder.comment}}</td>
       <button class="button button4" (click)="updateFolder(folder)">Edit</button>
       <button class="button button3" (click)="deleteFolder(folder.folderId)">Delete</button>
-      <button class="" (click)="addfiles(folder.folderId)">Add Files</button>
+      <button class="" (click)="addfiles(folder)">Add Files</button>
       &nbsp;
-      <button (click)="viewfile(folder.folderId)">View Files</button>
+      <button (click)="viewfile(folder)">View Files</button>
     </tr>
   </table>
   <!-- <app-documents></app-documents> -->
@@ -72,8 +72,11 @@
         </tr>
       </tbody>
     </table>
+
+
     <table class="table table-striped" *ngIf='isView'>
       <h3 style="color: white;">After view</h3>
+      <h3 style="color: white;">{{currentfolderName}}</h3>
       <thead>
         <tr style="color:white;font-size: 20px;">
           <th scope="col">File</th>
@@ -86,16 +89,13 @@
       <tbody>
         <tr style="color: aliceblue;" *ngFor="let fileUpload of fileUploads">
           <div *ngIf="isViewfolderId==fileUpload.folderId">
+            <h3>{{folder.name}}</h3>
             <td style="color: white;"> <img
                 src="https://cdn4.iconfinder.com/data/icons/small-n-flat/24/folder-green-512.png"
                 style="width: 40px; height:40px"></td>
             <td style="color: white;">{{fileUpload.name}}</td>
             <td style="color: white;">{{fileUpload.address}}</td>
             <!-- <td><app-delete [fileUrl]="userdata.imgPath"></app-delete></td>-->
-            <td style="color: white;">
-              <!-- <app-download [fileUrl]="fileUpload.imgPath"></app-download> -->
-              <button (click)="addToFolder(fileUpload)"> Add To Folder</button>
-            </td>
           </div>
         </tr>
       </tbody>
