--- a/src/app/dashboard/folders/folders.component.css
+++ b/src/app/dashboard/folders/folders.component.css
@@ -92,7 +92,7 @@ tr:hover {background-color: gray;}
   width: 80px;
   height: 40px;
 }
-
+ 
 /* .form-group{
   display: table-cell;
   font-size: 14px;
@@ -118,3 +118,10 @@ tr:hover {background-color: gray;}
   margin-left: auto;
   margin-right: auto;
 } */
+
+
+h1{
+  background-color: beige;
+  color: black;
+  padding: 0 5px;
+}
