--- a/src/app/info/info.component.css
+++ b/src/app/info/info.component.css
@@ -6,7 +6,7 @@
     padding: 15px;
     margin-top: 30px;
     background-color: #27293D;
-
+    font-size: 16px;
     box-shadow:
        inset 0 -3em 3em rgba(0,0,0,0.1),
              0.3em 0.3em 1em rgba(0,0,0,0.3);
