--- a/src/app/info/info.component.html
+++ b/src/app/info/info.component.html
@@ -103,7 +103,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!------ Include the above in your HEAD tag ---------->
 
-    <div class="container ">
+    <div class="container" >
         <form method="post">
             <tr *ngFor="let item of userList$|async">
                 <div class="row">
@@ -125,7 +125,7 @@
                             </h3>
                             <!-- <p class="proile-rating">RANKINGS : <span>8/10</span></p> -->
                             <ul class="nav nav-tabs" id="myTab" role="tablist">
-                                <h2>User Details</h2>
+                                <!-- <h2>User Details</h2> -->
                                 <!-- <li class="nav-item">
                                     <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab"
                                         aria-controls="home" aria-selected="true">About</a>
@@ -153,25 +153,26 @@
                 </div>
                 <div class="row">
                     <div class="col-md-4">
-                        <!-- <div class="profile-work">
-                            <p>WORK LINK</p>
-                            <a href="">Website Link</a><br />
-                            <a href="">Bootsnipp Profile</a><br />
-                            <a href="">Bootply Profile</a>
-                            <p>SKILLS</p>
+                        <div class="profile-work">
+                            <h3>Contact Details</h3>
+                            <p>Email</p>
+                            <a>{{item.userEmail}}</a><br />
+                            <p>Telephone Number</p>
+                            <a>{{item.telephoneNo}}</a><br />
+                            <!-- <p>SKILLS</p>
                             <a href="">Web Designer</a><br />
                             <a href="">Web Developer</a><br />
                             <a href="">WordPress</a><br />
                             <a href="">WooCommerce</a><br />
-                            <a href="">PHP, .Net</a><br />
-                        </div> -->
+                            <a href="">PHP, .Net</a><br /> -->
+                        </div>
                     </div>
                     <div class="col-md-8">
                         <div class="tab-content profile-tab" id="myTabContent">
                             <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <label>Emploayee Id</label>
+                                        <label>Employee Id</label>
                                     </div>
                                     <div class="col-md-6">
                                         <td style="color: white;">{{item.empId}}</td>
