--- a/src/app/authentication/login/login.component.css
+++ b/src/app/authentication/login/login.component.css
@@ -1,7 +1,14 @@
 .bgcard{
     /* background-image: "/app/assets/001.png"; */
-    background: url("https://www.processmaker.com/wp-content/uploads/2019/10/11.png");
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 100%;
+    /* background: url("https://www.processmaker.com/wp-content/uploads/2019/10/11.png"); */
+    /* background-repeat: no-repeat; */
+    width: 30%;
+    height: 50%;
+  
+    margin-right: 50%;
+
+   
+}
+.login{
+    flex-direction: column;
 }
