--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -1,4 +1,5 @@
-<div class="bgcard"></div>
+<div class="login">
+    <div class="bgcard"><img src="https://www.processmaker.com/wp-content/uploads/2019/10/11.png"></div>
     <div class="card">
         <div class="card-body">
             <h1 class="card-title" style="color: white;">Login</h1>
@@ -14,9 +15,12 @@
                         <input type="text" id="useremail" formControlName="useremail" class="form-control" />
                     </div>
                     <div class="col-md-5">
-                        <em *ngIf="validateControl('useremail') && hasError('useremail', 'email')">Please provide a valid email</em>
-                        <em *ngIf="validateControl('useremail') && hasError('useremail', 'required')">Email is required</em>
-                      </div>
+                        <em *ngIf="validateControl('useremail') && hasError('useremail', 'email')">Please provide a
+                            valid
+                            email</em>
+                        <em *ngIf="validateControl('useremail') && hasError('useremail', 'required')">Email is
+                            required</em>
+                    </div>
                     <!-- <div class="col-md-5" style="color: black;">
                         <em *ngIf="validateControl('username') && hasError('username', 'required')">UserEmail is
                             required</em>
@@ -45,3 +49,4 @@
             </form>
         </div>
     </div>
+</div>
