--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,8 +8,8 @@
     
     <!-- About Section -->
     <div class="w3-container" style="padding:128px 16px" id="about" >
-      <h3 class="w3-center">ABOUT THE COMPANY</h3>
-      <p class="w3-center w3-large">Key features of our company</p>
+      <h1 class="w3-center">Document Management System</h1>
+      <p class="w3-center w3-large">Key features of System</p>
       <div class="w3-row-padding w3-center" style="margin-top:64px">
         <div class="w3-quarter">
           <i class="fa fa-desktop w3-margin-bottom w3-jumbo w3-center"></i>
@@ -151,9 +151,9 @@
     <div class="w3-container w3-light-grey" style="padding:128px 16px" id="contact">
       <h3 class="w3-center">CONTACT</h3>
       <div style="margin-top:48px">
-        <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> Chicago, US</p>
-        <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Phone: +00 151515</p>
-        <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: mail@mail.com</p>
+        <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> Colombo, Sri Lanka</p>
+        <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Phone: +94 1234567</p>
+        <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: Dms@gmail.com</p>
         <br>
         <!-- Image of location/map -->
 
