--- a/src/app/privacy/manage-user/show-user/show-user.component.html
+++ b/src/app/privacy/manage-user/show-user/show-user.component.html
@@ -4,6 +4,7 @@
   Show Inspection Types
 </button> -->
 <div class="trashtable">
+  <h1 style="color: white;">User Deatails</h1>
   <table class="table table-striped" >
     <thead style="color: white;">
       <th>Employee Id</th>
