--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,11 +2,12 @@
 <!-- <div routerLink="/login"></div> -->
 <!-- <router-outlet></router-outlet> -->
 <!-- <div routerLink='["/authentication/login"]'><router-outlet></router-outlet></div> -->
-<div class="container1"  >
-    <div class="row1"  >
+<div class="container-fluid p-0"  >
           <app-menu></app-menu>
-    </div>
-    <div class="row1">
+
+  </div>
+  <div class="container"  >
+    <div class="row">
         <app-dashboard></app-dashboard>
     </div>
   </div>
