--- a/src/app/authentication/login/login.component.css
+++ b/src/app/authentication/login/login.component.css
@@ -1,14 +1,19 @@
-.bgcard{
-    /* background-image: "/app/assets/001.png"; */
-    /* background: url("https://www.processmaker.com/wp-content/uploads/2019/10/11.png"); */
-    /* background-repeat: no-repeat; */
-    width: 30%;
+.bgcard {
+    width: 50%;
     height: 50%;
-  
-    margin-right: 50%;
-
-   
 }
-.login{
-    flex-direction: column;
+.bgcard img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+.card{
+    width: 40%;
+    margin: 40px auto;
+}
+
+.login {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
