--- a/src/app/authentication/register-user/register-user.component.html
+++ b/src/app/authentication/register-user/register-user.component.html
@@ -1,48 +1,51 @@
-<div class="card2">
-  <div class="card-body">
-    <h1 class="card-title" style="color: white;">Register</h1>
+<div class="login">
+  <div class="bgcard"><img src="https://www.processmaker.com/wp-content/uploads/2019/10/11.png"></div>
+  <div class="card2">
+    <div class="card-body">
+      <h1 class="card-title" style="color: white;">Register</h1>
 
-    <div *ngIf="showError" class="alert alert-danger" role="alert">
-      <span [innerHTML]="errorMessage"></span>
+      <div *ngIf="showError" class="alert alert-danger" role="alert">
+        <span [innerHTML]="errorMessage"></span>
+      </div>
+
+      <form [formGroup]="registerForm" autocomplete="off" novalidate (ngSubmit)="registerUser(registerForm.value)">
+        <div class="mb-3 row">
+          <label for="email" class="col-form-label ">Email:</label>
+          <div class="col-md-12">
+            <input type="email" id="email" formControlName="email" class="form-control" />
+          </div>
+          <div class="col-md-5">
+            <em *ngIf="validateControl('email') && hasError('email', 'email')">Please provide a valid email</em>
+            <em *ngIf="validateControl('email') && hasError('email', 'required')">Email is required</em>
+          </div>
+        </div>
+        <div class="mb-3 row">
+          <label for="password" class="col-form-label">Password:</label>
+          <div class="col-md-12">
+            <input type="password" id="password" formControlName="password" class="form-control" />
+          </div>
+          <div class="col-md-5">
+            <em *ngIf="validateControl('password') && hasError('password', 'required')">Password is required</em>
+          </div>
+        </div>
+        <div class="mb-3 row">
+          <label for="confirm" class="col-form-label">Confirm Password:</label>
+          <div class="col-md-12">
+            <input type="password" id="confirm" formControlName="confirm" class="form-control" />
+          </div>
+          <div class="col-md-5">
+            <em *ngIf="validateControl('confirm') && hasError('confirm', 'required')">Confirmation is required</em>
+            <em *ngIf="hasError('confirm', 'mustMatch')">Passwords must match</em>
+          </div>
+        </div>
+        <br>
+        <div class="mb-3 row">
+          <div class="col-md-1">
+            <button type="submit" class="btn btn-primary" style="background-color:#3EA977; border: #3EA977;"
+              [disabled]="!registerForm.valid">Next</button>
+          </div>
+        </div>
+      </form>
     </div>
-
-    <form [formGroup]="registerForm" autocomplete="off" novalidate (ngSubmit)="registerUser(registerForm.value)">
-      <div class="mb-3 row">
-        <label for="email" class="col-form-label ">Email:</label>
-        <div class="col-md-12">
-          <input type="email" id="email" formControlName="email" class="form-control" />
-        </div>
-        <div class="col-md-5">
-          <em *ngIf="validateControl('email') && hasError('email', 'email')">Please provide a valid email</em>
-          <em *ngIf="validateControl('email') && hasError('email', 'required')">Email is required</em>
-        </div>
-      </div>
-      <div class="mb-3 row">
-        <label for="password" class="col-form-label">Password:</label>
-        <div class="col-md-12">
-          <input type="password" id="password" formControlName="password" class="form-control" />
-        </div>
-        <div class="col-md-5">
-          <em *ngIf="validateControl('password') && hasError('password', 'required')">Password is required</em>
-        </div>
-      </div>
-      <div class="mb-3 row">
-        <label for="confirm" class="col-form-label">Confirm Password:</label>
-        <div class="col-md-12">
-          <input type="password" id="confirm" formControlName="confirm" class="form-control" />
-        </div>
-        <div class="col-md-5">
-          <em *ngIf="validateControl('confirm') && hasError('confirm', 'required')">Confirmation is required</em>
-          <em *ngIf="hasError('confirm', 'mustMatch')">Passwords must match</em>
-        </div>
-      </div>
-
-      <br>
-      <div class="mb-3 row">
-        <div class="col-md-1">
-          <button type="submit" class="btn btn-primary" style="background-color:#3EA977; border: #3EA977;" [disabled]="!registerForm.valid">Register</button>
-        </div>
-      </div>
-    </form>
   </div>
 </div>
