--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -12,6 +12,7 @@
     width: 220px;
     background-color: #3EA977;
     position: fixed;
+    left: 0;
     overflow: auto;
     font-family:Helvetica;
     font-size: 18px;
@@ -95,14 +96,14 @@
 
 /* Left and right column */
 .column.side {
-  width: 25%; 
+  width: 12%; 
 }
 
 /* Middle column */
 .column.middle {
-  width: 75%;
-  margin-top: 20px;
-    margin-left: 280px;
+  width: 80%;
+  /* width: 100%; */
+  margin-top: 50px;
     padding: 1px 16px;
     color:white;
 }
