--- a/src/app/dashboard/settings/settings.component.css
+++ b/src/app/dashboard/settings/settings.component.css
@@ -4,8 +4,10 @@ div.set{
     border-color: #ddd;
     border-style: groove;
     padding: 15px;
-    margin-top: 100px;
     background-color: #27293D;
+    box-shadow:
+       inset 0 -3em 3em rgba(0,0,0,0.1),
+             0.3em 0.3em 1em rgba(0,0,0,0.3);
 }
 ul {
     border-collapse: collapse;
