--- a/src/app/userdetails/userdetails.component.html
+++ b/src/app/userdetails/userdetails.component.html
@@ -1,40 +1,62 @@
 <div class="trashtable">
-  <form #Form="ngForm" (ngSubmit)="addUser()">
+  <form #Form="ngForm" (ngSubmit)="addUser()" class="was-validated">
     <div class="form-group">
       <p><label for="pwd" style="color: white;">Employee Id</label></p>
-      <input type="text" class="form-control form-control-lg"
-        placeholder="Enter Description" name="empId" [(ngModel)]="userinformation.empId">
+      <input type="text" class="form-control form-control-lg" placeholder="Enter Description" name="empId"
+        [(ngModel)]="userinformation.empId" required="">
+      <div class="invalid-feedback">
+        File name is Required
+      </div>
     </div>
 
     <div class="form-group">
       <p><label for="pwd" style="color: white;">First Name</label></p>
-      <input type="text"  class="form-control form-control-lg"
-        placeholder="Enter Description" name="firstName" [(ngModel)]="userinformation.firstName">
+      <input type="text" class="form-control form-control-lg" placeholder="Enter Description" name="firstName"
+        [(ngModel)]="userinformation.firstName" required="">
+      <div class="invalid-feedback">
+        File name is Required
+      </div>
     </div>
     <div class="form-group">
       <p><label for="pwd" style="color: white;">Last Name</label></p>
       <input type="text" class="form-control form-control-lg" placeholder="Enter Description" name="lastName"
-        [(ngModel)]="userinformation.lastName">
+        [(ngModel)]="userinformation.lastName" required="">
+        <div class="invalid-feedback">
+          File name is Required
+        </div>
+
     </div>
     <div class="form-group">
       <p><label for="pwd" style="color: white;">Address</label></p>
       <input type="text" class="form-control form-control-lg" placeholder="Enter Description" name="address"
-        [(ngModel)]="userinformation.address">
+        [(ngModel)]="userinformation.address" required="">
+        <div class="invalid-feedback">
+          File name is Required
+        </div>
     </div>
     <div class="form-group">
       <p><label for="pwd" style="color: white;">City</label></p>
       <input type="text" class="form-control form-control-lg" placeholder="Enter Description" name="city"
-        [(ngModel)]="userinformation.city">
+        [(ngModel)]="userinformation.city" required="">
+        <div class="invalid-feedback">
+          File name is Required
+        </div>
     </div>
     <div class="form-group">
       <p><label for="pwd" style="color: white;">Job Position</label></p>
       <input type="text" class="form-control form-control-lg" placeholder="Enter Description" name="jobPosition"
-        [(ngModel)]="userinformation.jobPosition">
+        [(ngModel)]="userinformation.jobPosition" required="">
+        <div class="invalid-feedback">
+          File name is Required
+        </div>
     </div>
     <div class="form-group">
       <p><label for="pwd" style="color: white;">Telephone Number</label></p>
       <input type="text" class="form-control form-control-lg" placeholder="Enter Description" name="telephoneNo"
-        [(ngModel)]="userinformation.telephoneNo">
+        [(ngModel)]="userinformation.telephoneNo" required="">
+        <div class="invalid-feedback">
+          File name is Required
+        </div>
     </div>
     <button type="submit" class="button button5">Submit</button><br> -->
     <div class="row" *ngIf="registerationSuccess">
