--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -38,7 +38,7 @@
                 src="https://cdn1.iconfinder.com/data/icons/material-design-icons-light/24/bell-256.png"></a>
           </li>
           <li class="nav-item">
-            <a routerLink="/people"><img class="topnavicon"
+            <a routerLink="/groupmessage"><img class="topnavicon"
                 src="https://cdn2.iconfinder.com/data/icons/e-commerce-line-4-1/1024/users4-256.png"></a>
           </li>
           <li class="nav-item">
