--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,28 +8,28 @@
     
     <!-- About Section -->
     <div class="w3-container" style="padding:128px 16px" id="about" >
-      <h1 class="w3-center">Document Management System</h1>
+      <h1 class="w3-center" style="font-size: 50px; color:black; " >Document Management System</h1>
       <p class="w3-center w3-large">Key features of System</p>
       <div class="w3-row-padding w3-center" style="margin-top:64px">
         <div class="w3-quarter">
           <i class="fa fa-desktop w3-margin-bottom w3-jumbo w3-center"></i>
-          <p class="w3-large">Responsive</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+          <p class="w3-large">OCR & Barcode scanning</p>
+          <p>Scanning documents via these feature for ease access</p>
         </div>
         <div class="w3-quarter">
           <i class="fa fa-heart w3-margin-bottom w3-jumbo"></i>
-          <p class="w3-large">Passion</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+          <p class="w3-large">Storage</p>
+          <p>Store your files in one safe place, accessible from your computer, phone or tablet</p>
         </div>
         <div class="w3-quarter">
           <i class="fa fa-diamond w3-margin-bottom w3-jumbo"></i>
-          <p class="w3-large">Design</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+          <p class="w3-large">Access</p>
+          <p>Give the right people the right access.You can ensure shared files stay where they should.</p>
         </div>
         <div class="w3-quarter">
           <i class="fa fa-cog w3-margin-bottom w3-jumbo"></i>
           <p class="w3-large">Support</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+          <p>Contact admin via issue report feature</p>
         </div>
       </div>
     </div>
@@ -38,125 +38,54 @@
     <div class="w3-container w3-light-grey" style="padding:128px 16px">
       <div class="w3-row-padding">
         <div class="w3-col m6">
-          <h3>We know design.</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>tempor incididunt ut labore et dolore.</p>
-          <p><a href="#work" class="w3-button w3-black"><i class="fa fa-th"> </i> View Our Works</a></p>
+          <h3>WorkFlow</h3>
+          <p>With new  admin features, you can simplify team management, and gain actionable insights into team activity.</p>
+          <p><a href="#work" class="w3-button w3-black"><i class="fa fa-th"> </i> View our groups</a></p>
         </div>
         <div class="w3-col m6">
-          <img class="w3-image w3-round-large" src="https://www.kmslh.com/wp-content/uploads/2020/08/shutterstock_1182989344-900x411.jpg" alt="Buildings" width="700" height="394">
+          <img class="w3-image w3-round-large" src="https://images.unsplash.com/photo-1544396821-4dd40b938ad3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1173&q=80" alt="Buildings" width="700" height="394">
         </div>
       </div>
     </div>
 
-    <!-- Team Section -->
-<div class="w3-container" style="padding:128px 16px" id="team">
-    <h3 class="w3-center">THE TEAM</h3>
-    <p class="w3-center w3-large">The ones who runs this company</p>
-    <div class="w3-row-padding w3-grayscale" style="margin-top:64px">
-      <div class="w3-col l3 m6 w3-margin-bottom">
-        <div class="w3-card">
-          <img src="https://images.squarespace-cdn.com/content/v1/53b599ebe4b08a2784696956/1546710783911-TDN5S1027EK7I0D0RGN4/professional-headshots-nyc-011.jpg" alt="John" style="width:100%">
-          <div class="w3-container">
-            <h3>John Doe</h3>
-            <p class="w3-opacity">CEO & Founder</p>
-            <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-            <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button></p>
-          </div>
-        </div>
-      </div>
-      <div class="w3-col l3 m6 w3-margin-bottom">
-        <div class="w3-card">
-          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT3gRY0c0v5hGIddf8PQzuBY36_jH_ta23CwtBcyPFPusMhFs466iUUMJfvPqeIAYeQuCk&usqp=CAU" alt="Jane" style="width:100%">
-          <div class="w3-container">
-            <h3>Anja Doe</h3>
-            <p class="w3-opacity">Art Director</p>
-            <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-            <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button></p>
-          </div>
-        </div>
-      </div>
-      <div class="w3-col l3 m6 w3-margin-bottom">
-        <div class="w3-card">
-          <img src="https://images.squarespace-cdn.com/content/v1/596d1b9bc534a53e65e02bf7/1568104813489-EP47K083TKO280P2VX8O/blacksburg-portraits-by-peter-means-25.jpg" alt="Mike" style="width:100%">
-          <div class="w3-container">
-            <h3>Mike Ross</h3>
-            <p class="w3-opacity">Web Designer</p>
-            <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-            <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button></p>
-          </div>
-        </div>
-      </div>
-      <div class="w3-col l3 m6 w3-margin-bottom">
-        <div class="w3-card">
-          <img src="https://rommenphotography.com/wp-content/uploads/2012/04/Corporate-Portrait-CV-headshot_zakelijke_portretfoto.jpg" alt="Dan" style="width:100%">
-          <div class="w3-container">
-            <h3>Dan Star</h3>
-            <p class="w3-opacity">Designer</p>
-            <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-            <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button></p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+  
     
     <!-- Promo Section "Statistics" -->
     <div class="w3-container w3-row w3-center w3-dark-grey w3-padding-64">
-      <div class="w3-quarter">
-        <span class="w3-xxlarge">14+</span>
-        <br>Partners
-      </div>
-      <div class="w3-quarter">
-        <span class="w3-xxlarge">55+</span>
-        <br>Projects Done
-      </div>
-      <div class="w3-quarter">
-        <span class="w3-xxlarge">89+</span>
-        <br>Happy Clients
-      </div>
-      <div class="w3-quarter">
-        <span class="w3-xxlarge">150+</span>
-        <br>Meetings
-      </div>
-    </div>
-    
-    <!-- Skills Section -->
-    <div class="w3-container w3-light-grey w3-padding-64">
-      <div class="w3-row-padding">
-        <div class="w3-col m6">
-          <h3>Our Skills.</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>
-          tempor incididunt ut labore et dolore.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>
-          tempor incididunt ut labore et dolore.</p>
-        </div>
-        <div class="w3-col m6">
-          <p class="w3-wide"><i class="fa fa-camera w3-margin-right"></i>Photography</p>
-          <div class="w3-grey">
-            <div class="w3-container w3-dark-grey w3-center" style="width:90%">90%</div>
-          </div>
-          <p class="w3-wide"><i class="fa fa-desktop w3-margin-right"></i>Web Design</p>
-          <div class="w3-grey">
-            <div class="w3-container w3-dark-grey w3-center" style="width:85%">85%</div>
-          </div>
-          <p class="w3-wide"><i class="fa fa-photo w3-margin-right"></i>Photoshop</p>
-          <div class="w3-grey">
-            <div class="w3-container w3-dark-grey w3-center" style="width:75%">75%</div>
-          </div>
-        </div>
-      </div>
-    </div>
-    
-    <!-- Contact Section -->
-    <div class="w3-container w3-light-grey" style="padding:128px 16px" id="contact">
-      <h3 class="w3-center">CONTACT</h3>
-      <div style="margin-top:48px">
-        <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> Colombo, Sri Lanka</p>
-        <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Phone: +94 1234567</p>
-        <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: Dms@gmail.com</p>
+     
+      
+        <p style="font-size: 50px; color: azure;">Focus on the work that matters</p>
         <br>
-        <!-- Image of location/map -->
+        <p style="color: azure;">Scattered content, constant interruptions, difficulty coordinating there’s a smarter way to work.This helps people be organised, get in sync and stay secure with their teams.
+
+        </p>
 
       </div>
-    </div>
+      <br>
+      <div class="w3-container w3-light-grey" style="padding:128px 16px">
+        <div class="w3-row-padding">
+          <div class="w3-col m6">
+            <h1>Bring all your content together</h1>
+            <p>Create, download, delete, restore and search  your working files.</p>
+            
+          </div>
+          <div class="w3-col m6">
+            <!-- <img class="w3-image w3-round-large" src="https://images.unsplash.com/photo-1544396821-4dd40b938ad3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1173&q=80" alt="Buildings" width="700" height="394"> -->
+            <iframe src="https://giphy.com/embed/xTiTnns7mDY7pubqLe" width="480" height="192" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+          </div>
+         
+        </div>
+      </div>
+  
     
+      <div class="w3-container w3-row w3-center w3-dark-grey w3-padding-64">
+     
+        <h1 class="w3-center" style="color: azure;">CONTACT</h1>
+        <div style="margin-top:18px">
+          <p style="color: azure;"><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> Colombo, Sri Lanka</p>
+          <p style="color: azure;"><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Phone: +94 1234567</p>
+          <p style="color: azure;"><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> mail: dms@gmail.com</p>
+          <br>
+      </div>
+   
+   
