--- a/src/app/privacy/privacy.component.html
+++ b/src/app/privacy/privacy.component.html
@@ -10,6 +10,7 @@
         <a routerLink="/admin-notification"><img class="navicon" src="https://cdn1.iconfinder.com/data/icons/material-design-icons-light/24/bell-256.png">Admin-Notification</a>
         <a routerLink="/bug-report"><img class="navicon" src="https://cdn1.iconfinder.com/data/icons/document-edit-line/64/Document-doc-file-folder-bundle-sheaf-archive-256.png" >Issue Reports</a>
         <a routerLink="/groups"><img class="navicon" src="https://cdn3.iconfinder.com/data/icons/web-and-seo-31/16/setting-gear-cog-256.png">Groups</a>
+        <a routerLink="/useractivity"><img class="navicon" src="https://cdn3.iconfinder.com/data/icons/web-and-seo-31/16/setting-gear-cog-256.png">User Activities</a>
       </div>
     </div>
     <div class="column middle">
